# Durak

./: README.md  pyproject.toml
Durak/: __init__.py  data_eng.py  data_rus.py  main.py
Durak/scripts/: main.py  run.py
