[tool.poetry]
name = "durak"
version = "0.1.0"
description = "Play Durak with bots"
authors = ["Alexander-Zaychenko <alexzay2012@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
durak = 'Durak.scripts.main:main'
